<resources>
    <string name="app_name">MyAcademia</string>
    <string-array name="streamdrop">
        <item>FY BSCIT</item>
        <item>SY BSCIT</item>
        <item>TY BSCIT</item>
    </string-array>
    <string name="welcome">Welcome</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_in2">Sign-In with different account</string>
    <string name="new_here_click_here_to_register">New Here ? Click Here To Register</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="already_registered_click_here_to_sign_in">Already Registered?Click Here To Sign-In</string>
    <string name="stream">Stream</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="hello">Hello</string>
    <string name="notices">Notices</string>
    <string name="title">Title:</string>
    <string name="body">Body:</string>
    <string name="post">Post</string>
</resources>
